--- a/css/responsive.css
+++ b/css/responsive.css
@@ -92,7 +92,7 @@
     display: none !important;
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 1220px) {
   .row {
     margin-left: -30px;
     *zoom: 1;
