--- a/less/custom.less
+++ b/less/custom.less
@@ -18,11 +18,12 @@
 .air-qual-box { padding: 35px 5px 5px 20px; width: 50%; float: left; margin-bottom: 10px;}
 .air-qual-value { font-size: 30px; left: 40%; position: relative; top: -35px; }
 .air-qual-gradient {
-    width: 80%;
+    width: 90%;
     height: 25px;
     border-radius: 2px;
     float: right;
     margin-right: 15px;
+    padding-left: 5%;
     background-color: #D82F2F;
 background: -webkit-gradient(linear, left center, right center, from(#37B726), to(#D82F2F), color-stop(.5,#EAE844));
 background: -moz-linear-gradient(left, #37B726 0%, #EAE844 50%, #D82F2F 100%);
